# nhls

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
ExperimentFiles/1daperiodic/: 1daperiodicicxEXPERIMENT.slurm  1daperiodicicxtiles.slurm  1daperiodicskxEXPERIMENT.slurm  1daperiodicskxtiles.slurm  __tmpe  icxexe  plutoinputskx.c  plutoinputskx.pluto.c  skxexe
ExperimentFiles/1daperiodicSKX/: plutoinputskx.c  skxexe  (+3 more)
benches/: par_slice.rs
examples/: example_1.rs  gen_1d.rs  gen_1d.stencil  gen_2d.rs  gen_2d.stencil  heat_1d_ap_direct.rs  heat_1d_ap_fft.rs  heat_1d_ap_naive.rs  heat_1d_naive.rs  heat_1d_p_direct.rs  heat_1d_p_fft.rs  heat_1d_p_naive.rs  heat_2d.rs  heat_2d_ap_direct.rs  heat_2d_ap_direct_specialized.rs  heat_2d_ap_fft.rs  heat_2d_p_direct.rs  heat_2d_p_fft.rs  heat_2d_p_naive.rs  heat_3d_ap_fft.rs  heat_3d_p_fft.rs  heat_error.rs  recursive_solve.rs  repeated_squaring.rs  simd.rs  sv_heat_1d_fft.rs  sv_heat_2d_fft.rs  time_varying_2d.rs  tv_2d_ap_direct.rs  tv_2d_ap_fft.rs  tv_2d_p_fft.rs  tv_heat_1d_ap_fft.rs  tv_heat_1d_p_fft.rs  tv_heat_2d_ap_fft.rs  tv_heat_2d_p_fft.rs  tv_picture.rs  tv_rotating_2d.rs
scripts/: gen_1d_stencil.py  gen_1d_workflow.sh  gen_2d_stencil.py  gen_2d_workflow.sh  gen_viz.py
src/: apply_iter.rs  boundary.rs  build_info.rs  csv.rs  domain.rs  fft_solve.rs  image.rs  image_1d_example.rs  image_2d_example.rs  image_3d_example.rs  image_example_util.rs  image_init.rs  init.rs  lib.rs  linear_stencil.rs  mem_fmt.rs  naive_solver.rs  par_slice.rs  par_stencil.rs  par_stencil_2.rs  solver_interface.rs  squaring.rs  standard_stencils.rs  stencil.rs  trapezoid_region.rs  trapezoid_solve.rs  util.rs  vtk.rs
tests/: ap_solver_compare.rs  base_solver_compare.rs  direct_solver_compare.rs  tv_solver_compare.rs
(+226 files in other folders)
