[package]
name = "nhls"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.19.0"
colorous = "1.0.14"
fftw = { git = "https://github.com/SallySoul/fftw3-rs.git", tag = "fftw3-0.0.1" }

image = "0.25.2"
nalgebra = "0.33.2"
num = "0.4.3"
num-traits = "0.2.19"
rayon = "1.10.0"
clap = { version = "4.5.20", features = ["derive"] }

[dev-dependencies]
float-cmp = "0.10.0"

[profile.bench]
codegen-units = 1
