[package]
name = "nhls"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.19.0"
colorous = "1.0.14"
fftw = { git = "https://github.com/sallysoul/fftw3-rs.git", tag = "fftw3-v0.8.4" }

image = "0.25.2"
nalgebra = "0.33.2"
num = "0.4.3"
num-traits = "0.2.19"
rayon = "1.10.0"
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"
vtkio = "0.7.0-rc1"
sync-ptr = "0.1.1"
float-cmp = "0.10.0"

[dev-dependencies]

[profile.bench]
codegen-units = 1
