[package]
name = "nhls"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.19.0"
colorous = "1.0.14"
fftw = { git = "https://github.com/sallysoul/fftw3-rs.git", tag = "fftw3-v0.8.4" }

image = "0.25.2"
nalgebra = {version = "0.33.2", features = ["convert-bytemuck"]}
num = "0.4.3"
num-traits = "0.2.19"
rayon = "1.10.0"
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"
vtkio = "0.7.0-rc1"
sync-ptr = "0.1.1"
float-cmp = "0.10.0"
profiling = "1.0.16"
puffin_http = { version = "0.16.1", optional = true }

[dev-dependencies]

[profile.bench]
codegen-units = 1

[features]
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
profile-with-tracing = ["profiling/profile-with-tracing"]
default = ["profile-with-puffin"]
